fix: hide vertical scrollbar while keeping scroll functionality

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
 .layout {
   flex: 1;
   width: 100%;
-  padding: 0.4rem 0;
+  margin: 0.4rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -201,6 +201,15 @@ canvas {
   display: flex;
   flex-direction: column;
   width: 100%;
+  overflow-y: auto;
+  /* Firefox */
+  scrollbar-width: none;
+  /* IE and Edge */
+  -ms-overflow-style: none;
+}
+
+.score-wrap::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 .score-head {
@@ -226,7 +235,6 @@ canvas {
 
 .table-wrap {
   flex-grow: 1;
-  overflow-x: auto;
   padding: 0 1rem;
 }
 
